--- a/web/themes/custom/unl_five_herbie/css/theme/news_article.css
+++ b/web/themes/custom/unl_five_herbie/css/theme/news_article.css
@@ -17,6 +17,26 @@
   display: block !important;
 }
 
+/* CSS for the article lead image when there is no caption or credit filled out */
+.unlcms-article-lead-img-only img {
+  /* .dcf-obj-fit-cover */
+  object-fit: cover !important;
+  height: 100% !important;
+  width: 100% !important;
+  /* .dcf-d-block */
+  display: block !important;
+}
+
+.unlcms-article-lead-img-only .media-entity-bundle--image {
+  margin-bottom: 0;
+  /* .dcf-ratio-child */
+  bottom: 0 !important;
+  left: 0 !important;
+  position: absolute !important;
+  right: 0 !important;
+  top: 0 !important;
+}
+
 .unlcms-img-zoom-hover:hover img {
   transform: scale(1.03);
 }
